# cheque-scanner-web

./: .env.example  README.md  build-desktop.yml  generate-icons.mjs  package.json  svelte.config.js  tsconfig.test.json  vite.config.ts
.github/workflows/: build-desktop.yml
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: concurrency.ts  pipeline.ts  stores.ts  types.ts
src/lib/components/: ReviewPane.svelte
src/lib/extract/: fewshot.ts  normalize.ts  prompt.ts  rois.ts  validate.ts
src/lib/image/: ops.ts
src/lib/llm/: client.ts  transport.ts
src/lib/pdf/: render.ts
src/lib/segmentation/: detect.ts
src/lib/storage/: cropStore.ts
src/routes/: +page.svelte  +page.ts
src/routes/api/extract/: +server.ts
tests/: logic.test.ts
